CMAKE_MINIMUM_REQUIRED(VERSION 3.7)

INCLUDE(GNUInstallDirs)
SET(BINARY_DIRECTORY "${CMAKE_INSTALL_BINDIR}")
SET(LIBRARY_DIRECTORY "${CMAKE_INSTALL_LIBDIR}")
SET(INCLUDE_DIRECTORY "${CMAKE_INSTALL_INCLUDEDIR}")

SET(PROJECT_NAME Progress)

PROJECT(${PROJECT_NAME} LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 14)

FILE(GLOB ${PROJECT_NAME}_HEADERS "src/*.hxx")

ADD_LIBRARY(${PROJECT_NAME} INTERFACE)

TARGET_INCLUDE_DIRECTORIES(
        ${PROJECT_NAME} INTERFACE
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
        $<INSTALL_INTERFACE:include/progress>)

INSTALL(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}Export)
INSTALL(FILES ${${PROJECT_NAME}_HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/${INCLUDE_DIRECTORY}/progress)